# Generated by Django 5.2.8 on 2025-11-08 09:58

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
        ('auth', '0012_alter_user_first_name_max_length'),
    ]

    operations = [
        migrations.CreateModel(
            name='User',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('password', models.CharField(max_length=128, verbose_name='password')),
                ('last_login', models.DateTimeField(blank=True, null=True, verbose_name='last login')),
                ('is_superuser', models.BooleanField(default=False, help_text='Designates that this user has all permissions without explicitly assigning them.', verbose_name='superuser status')),
                ('email', models.EmailField(max_length=254, unique=True, verbose_name='Email')),
                ('first_name', models.CharField(blank=True, max_length=100, verbose_name='Prénom')),
                ('last_name', models.CharField(blank=True, max_length=100, verbose_name='Nom')),
                ('phone', models.CharField(blank=True, max_length=20, verbose_name='Téléphone')),
                ('role', models.CharField(choices=[('user', 'Utilisateur'), ('admin', 'Administrateur')], default='user', max_length=10, verbose_name='Rôle')),
                ('favorite_destinations', models.JSONField(blank=True, default=list, verbose_name='Destinations favorites')),
                ('travel_preferences', models.JSONField(blank=True, default=dict, verbose_name='Préférences de voyage')),
                ('profile_picture', models.ImageField(blank=True, null=True, upload_to='profiles/', verbose_name='Photo de profil')),
                ('is_active', models.BooleanField(default=True, verbose_name='Actif')),
                ('is_staff', models.BooleanField(default=False, verbose_name='Staff')),
                ('date_joined', models.DateTimeField(auto_now_add=True, verbose_name="Date d'inscription")),
                ('updated_at', models.DateTimeField(auto_now=True, verbose_name='Dernière modification')),
                ('groups', models.ManyToManyField(blank=True, help_text='The groups this user belongs to. A user will get all permissions granted to each of their groups.', related_name='user_set', related_query_name='user', to='auth.group', verbose_name='groups')),
                ('user_permissions', models.ManyToManyField(blank=True, help_text='Specific permissions for this user.', related_name='user_set', related_query_name='user', to='auth.permission', verbose_name='user permissions')),
            ],
            options={
                'verbose_name': 'Utilisateur',
                'verbose_name_plural': 'Utilisateurs',
                'ordering': ['-date_joined'],
            },
        ),
    ]
